--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,12 @@ test: &test
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: race
+  pool: 25
+  username: odde
+  socket: /var/run/mysqld/mysqld.sock
 
 cucumber:
   <<: *test
